@@ -1,0 +1,22 @@
+/* - - - - - - - - - - - - - - - - - - - - -
+Animated spinner icon
+
+$Id$
+- - - - - - - - - - - - - - - - - - - - - */
+
+span.spinner {
+	display: inline-block;
+	height: 16px;
+	width: 16px;
+}
+/* - - - - - - - - - - - - - - - - - - - - -
+Animated spinner icon
+
+$Id$
+- - - - - - - - - - - - - - - - - - - - - */
+
+span.spinner {
+	display: inline-block;
+	height: 16px;
+	width: 16px;
+}
